:bug: fix notebook scripts

--- a/notebooks/exploratory/0.10.0-bunop-describe-ovine_SNP50.ipynb
+++ b/notebooks/exploratory/0.10.0-bunop-describe-ovine_SNP50.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "moving-maximum",
+   "id": "perfect-accuracy",
    "metadata": {},
    "source": [
     "# ovine_SNP50HapMap_data\n",
-    "Describing `ovine_SNP50HapMap_data.zip` data"
+    "Describing `ovine_SNP50HapMap_data.zip` data. Files contained different subarchives. I normalized all the contents in a single file with subfolder in order to improve usage"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "printable-disability",
+   "id": "solar-printing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "assisted-rally",
+   "id": "former-bracket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fitting-transport",
+   "id": "color-switzerland",
    "metadata": {},
    "outputs": [
     {
@@ -50,12 +50,24 @@
      "output_type": "stream",
      "text": [
       "File Name                                             Modified             Size\n",
-      "ancestral_no_seg_gc08.out                      2020-03-04 10:08:58      1919200\n",
-      "Heaton.zip                                     2020-03-04 10:08:48      7878313\n",
-      "ovine_SNP50HapMap_data.pdf                     2020-03-04 10:08:10        58401\n",
-      "Parentage_04_may_09.zip                        2020-03-04 10:08:24      2150606\n",
-      "SNP50_Breedv1.zip                              2020-03-04 10:10:38     69349592\n",
-      "SNP50_Breedv2.zip                              2020-03-04 10:08:54      4203804\n"
+      "ovine_SNP50HapMap_data/                        2021-03-16 10:23:24            0\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv2/          2021-03-16 10:23:16            0\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv2/SNP50_Breedv2.map 2010-02-12 13:36:06      1610011\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv2/SNP50_Breedv2.ped 2010-02-12 13:36:26     27070481\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv2/ovine SNP50 Breedv2 data release.pdf 2010-02-12 13:21:02        46116\n",
+      "ovine_SNP50HapMap_data/Heaton/                 2021-03-16 10:22:46            0\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_LocusSummary.csv 2009-05-29 16:03:28      9801077\n",
+      "ovine_SNP50HapMap_data/Heaton/Sample_Map.txt   2009-05-29 16:02:34          429\n",
+      "ovine_SNP50HapMap_data/Heaton/SNP_Map.txt      2009-05-29 16:02:38      3053566\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_LocusXDNA.csv 2009-05-29 16:03:46      6480220\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_DNAReport.csv 2009-05-29 16:03:10          759\n",
+      "ovine_SNP50HapMap_data/Heaton/Mike Heaton Sheep 07may2009_FinalReport.txt 2009-05-29 16:02:52     15440934\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv1/          2021-03-16 10:23:08            0\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.ped 2009-05-22 01:34:48    552991775\n",
+      "ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.map 2009-05-22 01:34:48      1407804\n",
+      "ovine_SNP50HapMap_data/ancestral_no_seg_gc08.out 2020-03-04 10:08:58      1919200\n",
+      "ovine_SNP50HapMap_data/ovine_SNP50HapMap_data.pdf 2020-03-04 10:08:10        58401\n",
+      "ovine_SNP50HapMap_data/Parentage_04_may_09.PED 2009-06-04 08:27:40     19028003\n"
      ]
     }
    ],
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nasty-point",
+   "id": "union-conditions",
    "metadata": {},
    "source": [
     "This dataset have many subarchive inside. Let's do a quick check"
@@ -75,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "lucky-grass",
+   "id": "infinite-easter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,48 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "genuine-newport",
+   "id": "loose-letter",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening Heaton.zip\n",
-      "\n",
-      "File Name                                             Modified             Size\n",
-      "Mike Heaton Sheep 07may2009_DNAReport.zip      2009-05-29 18:22:36          582\n",
-      "Mike Heaton Sheep 07may2009_FinalReport.zip    2009-05-29 18:24:22      2852714\n",
-      "Mike Heaton Sheep 07may2009_LocusSummary.zip   2009-05-29 18:25:48      2361150\n",
-      "Mike Heaton Sheep 07may2009_LocusXDNA.zip      2009-05-29 18:27:00      1878623\n",
-      "Sample_Map.zip                                 2009-05-29 18:27:02          309\n",
-      "SNP_Map.zip                                    2009-05-29 18:27:26       782897\n",
-      "================================================================================\n",
-      "\n",
-      "Opening Parentage_04_may_09.zip\n",
-      "\n",
-      "File Name                                             Modified             Size\n",
-      "Parentage_04_may_09.PED                        2009-06-04 16:27:40     19028003\n",
-      "================================================================================\n",
-      "\n",
-      "Opening SNP50_Breedv1.zip\n",
-      "\n",
-      "File Name                                             Modified             Size\n",
-      "SNP50_Breedv1.map                              2009-05-22 09:34:48      1407804\n",
-      "SNP50_Breedv1.ped                              2009-05-22 09:34:48    552991775\n",
-      "================================================================================\n",
-      "\n",
-      "Opening SNP50_Breedv2.zip\n",
-      "\n",
-      "File Name                                             Modified             Size\n",
-      "SNP50_Breedv2.ped                              2010-02-12 13:36:26     27070481\n",
-      "ovine SNP50 Breedv2 data release.pdf           2010-02-12 13:21:02        46116\n",
-      "SNP50_Breedv2.map                              2010-02-12 13:36:06      1610011\n",
-      "================================================================================\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for archive in archives:\n",
     "    print(f\"Opening {archive}\\n\")\n",
@@ -138,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprised-bennett",
+   "id": "rolled-blocking",
    "metadata": {},
    "source": [
     "Files are quite old. I suppose the are in the old 3.1 coordinates system"
@@ -147,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "amended-concentrate",
+   "id": "adopted-austria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,24 +133,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "changing-edinburgh",
+   "id": "periodic-terrace",
    "metadata": {},
    "source": [
-    "## Heaton.zip"
+    "## Heaton"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "regional-metallic",
+   "id": "educated-mexican",
    "metadata": {},
    "source": [
-    "This dataset have no map/ped files. I need to process the SNP_Map file"
+    "This dataset have no map/ped files. I have no information about breeds or country. I need to process the SNP_Map file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cutting-hostel",
+   "id": "identical-philadelphia",
    "metadata": {},
    "outputs": [
     {
@@ -201,27 +174,22 @@
     "data_coordinates = dict()\n",
     "global_connection()\n",
     "\n",
-    "with handle.open(\"Heaton.zip\") as subhandle:\n",
-    "    subarchive = ZipFile(subhandle)\n",
-    "    with subarchive.open(\"SNP_Map.zip\") as map_handle:\n",
-    "        map_archive = ZipFile(map_handle)\n",
-    "        # map_archive.printdir()\n",
-    "        with io.TextIOWrapper(map_archive.open(\"SNP_Map.txt\"), encoding=\"utf-8\") as f:\n",
-    "            reader = csv.reader(f, delimiter=\"\\t\")\n",
-    "            header = next(reader)\n",
-    "            # print(header)\n",
-    "            for line in itertools.islice(reader, 10):\n",
-    "                qs = VariantSheep.objects(name=line[1])\n",
-    "                if qs.count() > 0:\n",
-    "                    variant = qs.get()\n",
-    "                    location = next(filter(lambda loc: loc.imported_from == \"SNPchiMp v.3\", variant.locations))\n",
-    "                    if line[2] != location.chrom or int(line[3]) != location.position:\n",
-    "                        print(f\"snp {line[1]} with different positions: {line[2]}:{line[3]} <> {location.chrom}:{location.position}\")"
+    "with io.TextIOWrapper(handle.open(\"ovine_SNP50HapMap_data/Heaton/SNP_Map.txt\"), encoding=\"utf-8\") as f:\n",
+    "    reader = csv.reader(f, delimiter=\"\\t\")\n",
+    "    header = next(reader)\n",
+    "    # print(header)\n",
+    "    for line in itertools.islice(reader, 10):\n",
+    "        qs = VariantSheep.objects(name=line[1])\n",
+    "        if qs.count() > 0:\n",
+    "            variant = qs.get()\n",
+    "            location = next(filter(lambda loc: loc.imported_from == \"SNPchiMp v.3\", variant.locations))\n",
+    "            if line[2] != location.chrom or int(line[3]) != location.position:\n",
+    "                print(f\"snp {line[1]} with different positions: {line[2]}:{line[3]} <> {location.chrom}:{location.position}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "positive-forum",
+   "id": "unauthorized-publication",
    "metadata": {},
    "source": [
     "Heaton coordinates are in outdated 3.1"
@@ -229,15 +197,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mental-audio",
+   "id": "mechanical-sweet",
    "metadata": {},
    "source": [
-    "## Parentage_04_may_09.zip"
+    "## Parentage_04_may_09"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "modular-vector",
+   "id": "stretch-peter",
    "metadata": {},
    "source": [
     "This file seems to have only PED informations"
@@ -246,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "affiliated-agenda",
+   "id": "going-cookie",
    "metadata": {},
    "outputs": [
     {
@@ -260,12 +228,10 @@
    "source": [
     "data = []\n",
     "\n",
-    "with handle.open(\"Parentage_04_may_09.zip\") as subhandle:\n",
-    "    subarchive = ZipFile(subhandle)\n",
-    "    with io.TextIOWrapper(subarchive.open(\"Parentage_04_may_09.PED\"), encoding=\"utf-8\") as f:\n",
-    "        reader = csv.reader(f, delimiter=\"\\t\")\n",
-    "        for line in reader:\n",
-    "            data.append(line)\n",
+    "with io.TextIOWrapper(handle.open(\"ovine_SNP50HapMap_data/Parentage_04_may_09.PED\"), encoding=\"utf-8\") as f:\n",
+    "    reader = csv.reader(f, delimiter=\"\\t\")\n",
+    "    for line in reader:\n",
+    "        data.append(line)\n",
     "\n",
     "# snp pairs are separated by single spaces. \"\\t\" define file columns\n",
     "print(f\"Data have {len(data)} samples and {len(data[0])-6} snps\")"
@@ -273,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-leone",
+   "id": "hairy-macedonia",
    "metadata": {},
    "source": [
     "I suppose that such data comes from 50K Illumina sheep, however I have no information on map (snp names and coordinates), so this dataset must be discarded"
@@ -281,33 +247,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "activated-actor",
+   "id": "isolated-asbestos",
    "metadata": {},
    "source": [
-    "## SNP50_Breedv1.zip"
+    "## SNP50_Breedv1\n",
+    "This seems to be the first release of [SheepHapMap](www.sheephapmap.org) data. There are multiple breeds coming from different countries, however I can't get info on countries nor find all breeds in dad-is. Some of them are cross-breeds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "capital-design",
+   "id": "solved-union",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_coordinates = dict()\n",
     "\n",
-    "with handle.open(\"SNP50_Breedv1.zip\") as subhandle:\n",
-    "    subarchive = ZipFile(subhandle)\n",
-    "    with io.TextIOWrapper(subarchive.open(\"SNP50_Breedv1.map\"), encoding=\"utf-8\") as f:\n",
-    "        for record in f:\n",
-    "            record = record.split()\n",
-    "            data_coordinates[record[1]] = (record[0], int(record[3]))"
+    "with io.TextIOWrapper(handle.open(\"ovine_SNP50HapMap_data/SNP50_Breedv1/SNP50_Breedv1.map\"), encoding=\"utf-8\") as f:\n",
+    "    for record in f:\n",
+    "        record = record.split()\n",
+    "        data_coordinates[record[1]] = (record[0], int(record[3]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "featured-alloy",
+   "id": "disciplinary-sleeve",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honest-homeless",
+   "id": "detected-provider",
    "metadata": {},
    "source": [
     "Those coordinates need to be checked"
@@ -359,33 +324,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-observation",
+   "id": "painted-darwin",
    "metadata": {},
    "source": [
-    "## SNP50_Breedv2.zip"
+    "## SNP50_Breedv2\n",
+    "This is an update of the sheep hapmap data, with a few more animals. The same considerations made for the first release apply also here"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "portable-objective",
+   "id": "flexible-sheffield",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_coordinates = dict()\n",
     "\n",
-    "with handle.open(\"SNP50_Breedv2.zip\") as subhandle:\n",
-    "    subarchive = ZipFile(subhandle)\n",
-    "    with io.TextIOWrapper(subarchive.open(\"SNP50_Breedv2.map\"), encoding=\"utf-8\") as f:\n",
-    "        for record in f:\n",
-    "            record = record.split()\n",
-    "            data_coordinates[record[1]] = (record[0], int(record[3]))"
+    "with io.TextIOWrapper(handle.open(\"ovine_SNP50HapMap_data/SNP50_Breedv2/SNP50_Breedv2.map\"), encoding=\"utf-8\") as f:\n",
+    "    for record in f:\n",
+    "        record = record.split()\n",
+    "        data_coordinates[record[1]] = (record[0], int(record[3]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "japanese-coupon",
+   "id": "horizontal-pharmaceutical",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contained-chest",
+   "id": "celtic-chinese",
    "metadata": {},
    "source": [
     "Those coordinates need to be checked"
