--- a/notebooks/exploratory/0.3-bunop-sheep-coordinates-and-ensembl.ipynb
+++ b/notebooks/exploratory/0.3-bunop-sheep-coordinates-and-ensembl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "thirty-associate",
+   "id": "finnish-strengthening",
    "metadata": {},
    "source": [
     "# Sheep Coordinates and Ensembl\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "about-graphic",
+   "id": "overhead-holocaust",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-encounter",
+   "id": "coastal-pharmacology",
    "metadata": {},
    "source": [
     "Start by reading snpchimp and snpchip illumina data from files"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "vital-background",
+   "id": "apparent-cholesterol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "divided-westminster",
+   "id": "confirmed-tuesday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "alpha-briefing",
+   "id": "laughing-consumption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clean-topic",
+   "id": "recent-latin",
    "metadata": {},
    "source": [
     "Ok, first track snp ids with different positions in both files. Skip SNP without rsID"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "substantial-adventure",
+   "id": "eleven-directory",
    "metadata": {},
    "outputs": [
     {
@@ -98,16 +98,16 @@
       "250506CS3900176800001_906.1 ('7', 81648528) [('7', 81648528), 'rs55630654']\n",
       "250506CS3900211600001_1041.1 ('16', 41355381) [('16', 41355381), 'rs55630658']\n",
       "250506CS3900218700001_1294.1 ('2', 148802744) [('2', 148802744), 'rs55630663']\n",
-      "250506CS3900283200001_442.1 ('1', 188498238) [('99', 0), 'NULL']\n",
+      "250506CS3900283200001_442.1 ('1', 188498238) [('99', 0), None]\n",
       "250506CS3900371000001_1255.1 ('11', 35339123) [('11', 35339123), 'rs417377113']\n",
       "250506CS3900386000001_696.1 ('16', 62646307) [('16', 62646307), 'rs55631041']\n",
       "250506CS3900414400001_1178.1 ('1', 103396552) [('1', 103396552), 'rs119102699']\n",
-      "250506CS3900435700001_1658.1 ('12', 45221821) [('99', 0), 'NULL']\n",
+      "250506CS3900435700001_1658.1 ('12', 45221821) [('99', 0), None]\n",
       "...\n",
       "\n",
       "N of SNPs in different positions from illumina to SNPchimp: 6463\n",
       "\n",
-      "N of SNPs with rsID with different positions from illumina to SNPchimp: 446\n"
+      "N of SNPs with rsID with different positions from illumina to SNPchimp: 447\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-petersburg",
+   "id": "occupational-paragraph",
    "metadata": {},
    "source": [
     "Select some snps to test coordinates with ensembl"
@@ -140,16 +140,21 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "minimal-reset",
+   "id": "dominican-bulgarian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_rsID = random.sample(sorted(list(rs_different.keys())), 20)"
+    "# filter out None rs\n",
+    "rs_keys = [rs for rs in rs_different.keys() if rs is not None]\n",
+    "selected_rsID = random.sample(sorted(rs_keys), 10)\n",
+    "\n",
+    "# add a custom rs\n",
+    "selected_rsID.append(\"rs408606108\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "after-pavilion",
+   "id": "stunning-stereo",
    "metadata": {},
    "source": [
     "Ok, search in Ensembl for snp coordinates:"
@@ -158,41 +163,23 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "broad-ability",
+   "id": "committed-jewel",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rs425699569 22 11834157 [('99', 0), 'rs425699569'] ('0', 0)\n",
-      "rs425699569 8 65323970 [('99', 0), 'rs425699569'] ('0', 0)\n",
+      "rs428267146 3 5146200 [('3', 5146199), 'rs428267146'] ('3', 5146197)\n",
+      "rs406134692 7 29834504 [('7', 29834504), 'rs406134692'] ('7', 29834566)\n",
+      "rs415771800 2 27912185 [('2', 27912184), 'rs415771800'] ('2', 27912185)\n",
+      "rs409291640 11 61430571 [('11', 61430571), 'rs409291640'] ('11', 61430572)\n",
+      "rs425665688 3 177824621 [('99', 0), 'rs425665688'] ('0', 0)\n",
+      "rs425665688 1 91348961 [('99', 0), 'rs425665688'] ('0', 0)\n",
       "rs408606108 8 54058725 [('8', 54058724), 'rs408606108'] ('8', 54058725)\n",
-      "rs401864361 5 421202 [('99', 0), 'rs401864361'] ('5', 421202)\n",
-      "rs401864361 2 37675010 [('99', 0), 'rs401864361'] ('5', 421202)\n",
-      "rs413442283 1 101287466 [('1', 101287466), 'rs413442283'] ('0', 0)\n",
-      "rs412975244 18 41753748 [('18', 41753748), 'rs412975244'] ('18', 41754171)\n",
-      "rs399648478 6 95754461 [('99', 0), 'rs399648478'] ('0', 0)\n",
-      "rs399648478 1 204559015 [('99', 0), 'rs399648478'] ('0', 0)\n",
-      "rs424302120 3 219942506 [('99', 0), 'rs424302120'] ('0', 0)\n",
-      "rs424302120 17 71805399 [('99', 0), 'rs424302120'] ('0', 0)\n",
-      "rs420863892 22 39563020 [('99', 0), 'rs420863892'] ('0', 0)\n",
-      "rs420863892 X 78550524 [('99', 0), 'rs420863892'] ('0', 0)\n",
-      "rs425839344 18 3758393 [('18', 3758393), 'rs425839344'] ('0', 0)\n",
-      "rs414323791 4 84469814 [('4', 84469814), 'rs414323791'] ('0', 0)\n",
-      "rs425910811 3 126995547 [('3', 126995546), 'rs425910811'] ('3', 126995547)\n",
-      "rs406790284 2 200835122 [('2', 200835122), 'rs406790284'] ('0', 0)\n",
-      "rs426537440 19 19089105 [('19', 19089105), 'rs426537440'] ('0', 0)\n",
-      "rs429149655 16 69135141 [('16', 69135141), 'rs429149655'] ('16', 69135038)\n",
-      "rs417834358 3 99523184 [('3', 99523184), 'rs417834358'] ('3', 99523185)\n",
-      "rs410856531 20 30954771 [('99', 0), 'rs410856531'] ('0', 0)\n",
-      "rs410856531 1 130841187 [('99', 0), 'rs410856531'] ('0', 0)\n",
-      "rs413468596 3 60498732 [('99', 0), 'rs413468596'] ('0', 0)\n",
-      "rs413468596 5 2091014 [('99', 0), 'rs413468596'] ('0', 0)\n",
-      "rs424683221 3 146769326 [('99', 0), 'rs424683221'] ('0', 0)\n",
-      "rs424683221 10 19645050 [('99', 0), 'rs424683221'] ('0', 0)\n",
-      "rs424683221 4 67246363 [('99', 0), 'rs424683221'] ('0', 0)\n",
-      "rs424683221 2 150459807 [('99', 0), 'rs424683221'] ('0', 0)\n"
+      "rs408458247 8 17823087 [('8', 17823087), 'rs408458247'] ('8', 17823088)\n",
+      "rs422423877 24 5726120 [('24', 5726120), 'rs422423877'] ('24', 5726121)\n",
+      "rs411384047 7 96461265 [('7', 96461265), 'rs411384047'] ('0', 0)\n"
      ]
     }
    ],
@@ -206,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-underwear",
+   "id": "ranking-shaft",
    "metadata": {},
    "source": [
     "The coordinates are different: sometimes they are equal to SNPchimp, sometimes with illumina chip. Sometimes there are totally different. I think that it depends on the dbSNP version used for build or the align method in general.\n",
