--- a/notebooks/exploratory/0.4-bunop-goat-coordinates-and-ensembl.ipynb
+++ b/notebooks/exploratory/0.4-bunop-goat-coordinates-and-ensembl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "equivalent-colleague",
+   "id": "collaborative-numbers",
    "metadata": {},
    "source": [
     "# About Goat Coordinates\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "equivalent-sunglasses",
+   "id": "boxed-lesbian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precise-tamil",
+   "id": "offensive-asthma",
    "metadata": {},
    "source": [
     "Like sheep, try to read data files for Goat:"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "legislative-pickup",
+   "id": "focused-ocean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "collectible-bangkok",
+   "id": "choice-lender",
    "metadata": {},
    "outputs": [
     {
@@ -98,48 +98,48 @@
        "      <td>1</td>\n",
        "      <td>101941444</td>\n",
        "      <td>TOP</td>\n",
-       "      <td>[A/G]</td>\n",
+       "      <td>A/G</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1_10408764_AF-PAKI</th>\n",
        "      <td>1</td>\n",
        "      <td>10408764</td>\n",
        "      <td>TOP</td>\n",
-       "      <td>[A/G]</td>\n",
+       "      <td>A/G</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1_104453302_AF-PAKI</th>\n",
        "      <td>1</td>\n",
        "      <td>104453302</td>\n",
        "      <td>TOP</td>\n",
-       "      <td>[A/G]</td>\n",
+       "      <td>A/G</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1_107080965_AF-PAKI</th>\n",
        "      <td>1</td>\n",
        "      <td>107080965</td>\n",
        "      <td>BOT</td>\n",
-       "      <td>[T/C]</td>\n",
+       "      <td>T/C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1_109839943_AF-PAKI</th>\n",
        "      <td>1</td>\n",
        "      <td>109839943</td>\n",
        "      <td>BOT</td>\n",
-       "      <td>[T/C]</td>\n",
+       "      <td>T/C</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    chr   position ilmnstrand    snp\n",
-       "name                                                \n",
-       "1_101941444_AF-PAKI   1  101941444        TOP  [A/G]\n",
-       "1_10408764_AF-PAKI    1   10408764        TOP  [A/G]\n",
-       "1_104453302_AF-PAKI   1  104453302        TOP  [A/G]\n",
-       "1_107080965_AF-PAKI   1  107080965        BOT  [T/C]\n",
-       "1_109839943_AF-PAKI   1  109839943        BOT  [T/C]"
+       "                    chr   position ilmnstrand  snp\n",
+       "name                                              \n",
+       "1_101941444_AF-PAKI   1  101941444        TOP  A/G\n",
+       "1_10408764_AF-PAKI    1   10408764        TOP  A/G\n",
+       "1_104453302_AF-PAKI   1  104453302        TOP  A/G\n",
+       "1_107080965_AF-PAKI   1  107080965        BOT  T/C\n",
+       "1_109839943_AF-PAKI   1  109839943        BOT  T/C"
       ]
      },
      "execution_count": 3,
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "intelligent-maryland",
+   "id": "chinese-integrity",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "center-locking",
+   "id": "critical-powder",
    "metadata": {},
    "source": [
     "I'm pretty sure that coordinates don't match. Assemblies are different. Does chips have same snps names?"
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "nutritional-offense",
+   "id": "criminal-perfume",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considerable-holder",
+   "id": "another-wings",
    "metadata": {},
    "source": [
     "So, keys are different. Does the new chip contains all the SNPchimp entries?"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "numerical-carter",
+   "id": "strategic-purpose",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-directive",
+   "id": "pursuant-abraham",
    "metadata": {},
    "source": [
     "I've discovered that there are ~6300 new SNPs in the new chip version. Does the coordinate match for SNPs in two dataset? I soppose **NO** since assemblies are different"
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "assisted-enterprise",
+   "id": "vocal-mountain",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparable-habitat",
+   "id": "handed-access",
    "metadata": {},
    "source": [
     "So no coordinates match. Almost all SNPs have a rsID in snpchimp"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "published-sitting",
+   "id": "packed-international",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,32 +403,31 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "relative-visiting",
+   "id": "governing-unemployment",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rs268282378 snp50674-scaffold730-447988 22 20287905 G/A ['22', 20237635, 'bottom', 'A/G'] ['22', 20287905, 'BOT', '[T/C]']\n",
-      "rs268274279 snp42359-scaffold559-842435 1 10935158 G/A ['1', 11724563, 'top', 'A/G'] ['1', 10935158, 'BOT', '[T/C]']\n",
-      "rs268235325 snp2255-scaffold1069-1127603 1 65189519 A/G ['1', 64030909, 'top', 'A/G'] ['1', 65189519, 'TOP', '[A/G]']\n",
-      "rs268274388 snp42470-scaffold562-593775 5 59091840 G/A ['5', 58268128, 'top', 'A/G'] ['5', 59091840, 'TOP', '[A/G]']\n",
-      "rs268259202 snp26860-scaffold283-12333 18 57525671 G/A ['18', 54944621, 'top', 'A/G'] ['18', 57525671, 'BOT', '[T/C]']\n",
-      "rs268257350 snp24964-scaffold2564-76100 3 1144810 T/C ['3', 115689389, 'top', 'A/G'] ['3', 1144810, 'TOP', '[A/G]']\n",
-      "rs268254610 snp22152-scaffold2188-248935 25 262122 A/C ['25', 280195, 'bottom', 'A/C'] ['25', 262122, 'TOP', '[A/C]']\n",
-      "rs268279042 snp47245-scaffold663-870635 17 66609143 G/T ['17', 4142634, 'top', 'A/C'] ['17', 66609143, 'TOP', '[A/C]']\n",
-      "rs268285067 snp53433-scaffold81-122245 8 48201709 G/A ['8', 47064512, 'top', 'A/G'] ['8', 48201709, 'TOP', '[A/G]']\n",
-      "rs268243625 snp10771-scaffold1383-755892 5 105714166 T/C ['5', 97930804, 'top', 'A/G'] ['5', 105714166, 'TOP', '[A/G]']\n",
-      "rs268279418 snp47629-scaffold67-5596959 26 20039206 G/A ['26', 30372459, 'top', 'A/G'] ['26', 20039206, 'TOP', '[A/G]']\n",
-      "rs268286479 snp54869-scaffold838-4488889 28 27193495 A/G ['28', 16242903, 'bottom', 'A/G'] ['28', 27193495, 'TOP', '[A/G]']\n",
-      "rs268272292 snp40293-scaffold514-1068053 1 142289169 A/G ['1', 140320986, 'top', 'A/G'] ['1', 142289169, 'BOT', '[T/C]']\n",
-      "rs268240229 snp7288-scaffold1269-1316769 7 52755743 A/C ['7', 53912503, 'bottom', 'A/C'] ['7', 52755743, 'TOP', '[A/C]']\n",
-      "rs268263448 snp31229-scaffold345-4285855 4 66682547 G/A ['4', 51106681, 'top', 'A/G'] ['4', 66682547, 'TOP', '[A/G]']\n",
-      "rs268251087 snp18490-scaffold187-1019623 15 12021073 A/G ['15', 67376717, 'top', 'A/G'] ['15', 12021073, 'TOP', '[A/G]']\n",
-      "rs268269566 snp37485-scaffold4588-70353 28 9873126 T/C ['28', 33558841, 'bottom', 'A/G'] ['28', 9873126, 'BOT', '[T/C]']\n",
-      "rs268254350 snp21884-scaffold215-191427 11 21418411 G/A ['11', 21319581, 'bottom', 'A/G'] ['11', 21418411, 'BOT', '[T/C]']\n",
-      "rs268269672 snp37591-scaffold460-518846 3 87376548 A/G ['3', 31087786, 'top', 'A/G'] ['3', 87376548, 'TOP', '[A/G]']\n"
+      "rs268239058 snp6081-scaffold1216-103970 13 9575467 C/A ['13', 9179149, 'top', 'A/C'] ['13', 9575467, 'TOP', 'A/C']\n",
+      "rs268292422 snp35435-scaffold427-949089 9 41528091 G/A ['9', 41264923, 'top', 'A/G'] ['9', 41528091, 'TOP', 'A/G']\n",
+      "rs268278628 snp46818-scaffold653-2097388 11 99026982 G/T ['11', 97952477, 'top', 'A/C'] ['11', 99026982, 'BOT', 'T/G']\n",
+      "rs268248074 snp15346-scaffold163-2748091 22 38417436 C/T ['22', 38293677, 'top', 'A/G'] ['22', 38417436, 'TOP', 'A/G']\n",
+      "rs268282075 snp50367-scaffold72-2629775 21 11607025 T/C ['21', 10396630, 'bottom', 'A/G'] ['21', 11607025, 'BOT', 'T/C']\n",
+      "rs268241883 snp8977-scaffold1327-155697 16 22609992 A/G ['16', 21823346, 'top', 'A/G'] ['16', 22609992, 'TOP', 'A/G']\n",
+      "rs268243138 snp10268-scaffold1368-2529699 23 6733488 G/A ['23', 40785604, 'top', 'A/G'] ['23', 6733488, 'TOP', 'A/G']\n",
+      "rs268269625 snp37544-scaffold46-1948609 1 153745989 C/T ['1', 151371167, 'top', 'A/G'] ['1', 153745989, 'BOT', 'T/C']\n",
+      "rs268268850 snp36756-scaffold445-2969981 15 48728463 T/C ['15', 31897111, 'bottom', 'A/G'] ['15', 48728463, 'BOT', 'T/C']\n",
+      "rs268243863 snp11019-scaffold1395-1414989 21 35460034 C/T ['21', 33583602, 'top', 'A/G'] ['21', 35460034, 'BOT', 'T/C']\n",
+      "rs268285807 snp54182-scaffold827-1365982 22 42528009 A/G ['22', 42407849, 'top', 'A/G'] ['22', 42528009, 'TOP', 'A/G']\n",
+      "rs268277620 snp45792-scaffold628-1842602 15 38381298 T/C ['15', 42234729, 'top', 'A/G'] ['15', 38381298, 'BOT', 'T/C']\n",
+      "rs268274585 snp42676-scaffold566-4132073 14 14964742 T/C ['14', 77560165, 'top', 'A/G'] ['14', 14964742, 'TOP', 'A/G']\n",
+      "rs268279747 snp47974-scaffold676-200418 4 102093391 C/T ['4', 16323475, 'top', 'A/G'] ['4', 102093391, 'TOP', 'A/G']\n",
+      "rs268234824 snp1740-scaffold1048-1979346 15 28298204 A/G ['15', 51312046, 'bottom', 'A/G'] ['15', 28298204, 'BOT', 'T/C']\n",
+      "rs268251294 snp18702-scaffold189-886569 6 4945869 T/C ['6', 4000730, 'top', 'A/G'] ['6', 4945869, 'BOT', 'T/C']\n",
+      "rs268252323 snp19799-scaffold199-4303220 17 42509012 A/G ['17', 28072460, 'bottom', 'A/G'] ['17', 42509012, 'BOT', 'T/C']\n",
+      "rs268273990 snp42060-scaffold55-950219 3 60722674 A/G ['3', 57142821, 'bottom', 'A/G'] ['3', 60722674, 'TOP', 'A/G']\n"
      ]
     }
    ],
@@ -447,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wound-shark",
+   "id": "medieval-payment",
    "metadata": {},
    "source": [
     "It seems to me that coordinates stored in chip are identical with ensembl (or at least for this subset of SNPs)"
